// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberAttrSelect /> attrSelect = "=" 1`] = `
<div
  class="gio-input gio-input--middle gio-input__container"
>
  <input
    class="gio-input__content gio-input__content-suffix"
    placeholder=""
    type="text"
    value="0"
  />
  <div
    class="gio-input__suffix"
  >
    <div
      class="gio-input__suffix-iconGroup"
    >
      <span
        class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
      >
        <svg
          class="gio-icon-svg"
          fill="currentColor"
          height="16px"
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <g
            data-name="\\\\u56FE\\\\u5C42 2"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
          >
            <g
              data-name="\\\\u56FE\\\\u5C42 1"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
            >
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fill-rule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
      <span
        class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
      >
        <svg
          class="gio-icon-svg"
          fill="currentColor"
          height="16px"
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <g
            data-name="\\\\u56FE\\\\u5C42 2"
            id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
          >
            <g
              data-name="\\\\u56FE\\\\u5C42 1"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
            >
              <path
                d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                fill="currentColor"
                fill-rule="evenodd"
                id="up-filled_svg__up-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<NumberAttrSelect /> attrSelect = "=" 2`] = `
<div
  class="gio-input gio-input--middle gio-input__container"
>
  <input
    class="gio-input__content gio-input__content-suffix"
    placeholder=""
    type="text"
    value="10"
  />
  <div
    class="gio-input__suffix"
  >
    <div
      class="gio-input__suffix-iconGroup"
    >
      <span
        class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
      >
        <svg
          class="gio-icon-svg"
          fill="currentColor"
          height="16px"
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <g
            data-name="\\\\u56FE\\\\u5C42 2"
            id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
          >
            <g
              data-name="\\\\u56FE\\\\u5C42 1"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
            >
              <path
                d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                fill="currentColor"
                fill-rule="evenodd"
                id="down-filled_svg__down-2"
              />
            </g>
          </g>
        </svg>
      </span>
      <span
        class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
      >
        <svg
          class="gio-icon-svg"
          fill="currentColor"
          height="16px"
          viewBox="0 0 14 14"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <g
            data-name="\\\\u56FE\\\\u5C42 2"
            id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
          >
            <g
              data-name="\\\\u56FE\\\\u5C42 1"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
            >
              <path
                d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                fill="currentColor"
                fill-rule="evenodd"
                id="up-filled_svg__up-2"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<NumberAttrSelect /> attrSelect = "between" 1`] = `
<div
  style="display:flex;align-items:center"
>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="0"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin:0 16px"
  >
    与
  </div>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="0"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberAttrSelect /> attrSelect = "between" 2`] = `
<div
  style="display:flex;align-items:center"
>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="30"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin:0 16px"
  >
    与
  </div>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="0"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberAttrSelect /> attrSelect = "between" 3`] = `
<div
  style="display:flex;align-items:center"
>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="-30"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin:0 16px"
  >
    与
  </div>
  <div
    class="gio-input gio-input--middle gio-input__container"
    style="width:120px"
  >
    <input
      class="gio-input__content gio-input__content-suffix"
      placeholder=""
      type="text"
      value="40"
    />
    <div
      class="gio-input__suffix"
    >
      <div
        class="gio-input__suffix-iconGroup"
      >
        <span
          class="gio-icon gio-input__suffix-iconGroup-bottom gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="down-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="down-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M7.39 9.51a.5.5 0 01-.78 0l-3-3.7a.51.51 0 01-.06-.53A.5.5 0 014 5h6a.5.5 0 01.45.28.51.51 0 01-.06.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="down-filled_svg__down-2"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="gio-icon gio-input__suffix-iconGroup-top gio-input__suffix-icon"
        >
          <svg
            class="gio-icon-svg"
            fill="currentColor"
            height="16px"
            viewBox="0 0 14 14"
            width="16px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <g
              data-name="\\\\u56FE\\\\u5C42 2"
              id="up-filled_svg__\\\\u56FE\\\\u5C42_2"
            >
              <g
                data-name="\\\\u56FE\\\\u5C42 1"
                id="up-filled_svg__\\\\u56FE\\\\u5C42_1-2"
              >
                <path
                  d="M6.61 4.49a.5.5 0 01.78 0l3 3.7a.51.51 0 01.06.53A.5.5 0 0110 9H4a.5.5 0 01-.45-.28.51.51 0 01.06-.53z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  id="up-filled_svg__up-2"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NumberAttrSelect /> attrSelect = "hasValue" 1`] = `null`;

exports[`<NumberAttrSelect /> attrSelect = "noValue" 1`] = `null`;
